# avante.nvim

./: .gitignore
crates/avante-templates/: Cargo.toml
crates/avante-tokenizers/: Cargo.toml
crates/avante-tokenizers/src/: lib.rs
crates/hf-hub/: Cargo.toml
lua/avante/: error_handler.lua  init.lua  llm.lua  path.lua  sidebar.lua
lua/avante/llm_tools/: init.lua
lua/avante/providers/: bedrock.lua
tests/: error_handler_spec.lua
