[lib]
crate-type = ["cdylib"]

[package]
name = "avante-tokenizers"
edition = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
dirs = "5.0.1"
regex = "1.11.1"
hf-hub = { path='../hf-hub', features = ["default", "ureq"] }
ureq = { path = "../ureq", features = [
  "json",
  "socks-proxy",
] }
mlua = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true }
jni = "0.21.1"

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
